// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-radio-button spec: Render logic -> should render a radio button with no label and a type of radio for input by default 1`] = `
<amplify-radio-button>
  <span class="amplify-ui--radio-button css-iud8ha">
    <input placeholder="" type="radio">
    <amplify-label></amplify-label>
  </span>
</amplify-radio-button>
`;

exports[`amplify-radio-button spec: Render logic -> should render only class \`amplify-ui--radio-button\` when style override is set to true 1`] = `
<amplify-radio-button override-style="true">
  <span class="amplify-ui--radio-button">
    <input placeholder="" type="radio">
    <amplify-label></amplify-label>
  </span>
</amplify-radio-button>
`;
